--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_Facturas_x_guia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_Facturas_x_guia.cshtml
@@ -28,11 +28,6 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-
-
-
-
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_tipoDoc";
@@ -57,8 +52,8 @@
             column.Caption = "# documento";
             column.Width = Unit.Percentage(10);
         });
-      
 
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
 
         settings.PreRender = (sender, e) =>
         {
