--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_cuotas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_cuotas.cshtml
@@ -70,6 +70,7 @@
 
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "valor_a_cobrar").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
