--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
@@ -55,16 +55,27 @@
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
+            if ((e.GetValue("esta_impresa") == null ? false : Convert.ToBoolean(e.GetValue("esta_impresa"))) == true && Convert.ToString(e.GetValue("Estado")) == "A")
+            {
+                e.Row.ForeColor = System.Drawing.Color.Blue;
+            }
         };
         settings.Columns.Add(c =>
         {
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                if ((DataBinder.Eval(tc.DataItem, "Estado") == null ? false : Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "esta_impresa"))) != true && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
                     Html.ActionLink("Modificar", "Modificar", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
+                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    );
+                }else
+                    if ((DataBinder.Eval(tc.DataItem, "Estado") == null ? false : Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "esta_impresa"))) == true && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                {
+                    ViewContext.Writer.Write(
                         Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
@@ -137,7 +148,7 @@
             });
             column.Width = Unit.Percentage(5);
         });
-settings.Columns.Add(column =>
+        settings.Columns.Add(column =>
         {
             column.Caption = "Pre-impreso";
             column.SetDataItemTemplateContent(c =>
