--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
@@ -150,15 +150,12 @@
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
-        settings.ClientSideEvents.BeginCallback = "function(s,e){e.customArgs['IdCliente'] = IdCliente.GetValue();}";
-
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_subtotal").DisplayFormat = "{0:n2}";
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_iva").DisplayFormat = "{0:n2}";
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_total").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
 
-
-        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdCliente'] = IdCliente.GetValue(); e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
