--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Modificar.cshtml
@@ -39,7 +39,7 @@
     });
 
     function MostrarModal() {
-        GridView_LoteCreditoFacturacion.PerformCallback();
+        GridView_LoteDebitoFacturacion.PerformCallback();
         $("#OpModal").modal("show");
     }
 
@@ -188,35 +188,11 @@
             $("#divNaturaleza").hide();
     }
 
-        function AddFACT() {
-        var datos = {
-            IDs: selectedIDs
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNewCruce", "NotaDeDebitoFacturacion",new { Area = "Facturacion"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-            },
-            error: function (error) {
-            }
-        });
-        selectedIDs = "";
-        GridView_CruceND_x_cruzar.PerformCallback();
-        GridView_CruceND_x_cruzar.UnselectRows();
-            GridView_CruceND.PerformCallback();
-            GridView_notaDebito_det.PerformCallback();
-        $("#FacturasModal").modal("hide");
-    }
     var selectedIDs;
     function OnBeginCallback(s, e) {
         //Pass all selected keys to GridView callback action
         e.customArgs["selectedIDs"] = selectedIDs;
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
     }
     function OnSelectionChanged(s, e) {
         s.GetSelectedFieldValues("secuencial", GetSelectedFieldValuesCallback);
@@ -231,7 +207,8 @@
 
             var datos = {
                 IdSucursal: $("#IdSucursal").val(),
-                IdCliente: IdCliente.GetValue()
+                IdCliente: IdCliente.GetValue(),
+                IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -257,7 +234,8 @@
         function AddFacturas() {
 
         var datos = {
-            IDs: selectedIDs
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -285,7 +263,7 @@
      function VaciarListas() {
 
         var datos = {
-            IDs: selectedIDs
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -314,6 +292,7 @@
     @Html.HiddenFor(q => q.IdBodega)
     @Html.HiddenFor(q => q.IdNota)
     @Html.HiddenFor(q => q.CodDocumentoTipo)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.CreDeb)
 
     if (ViewBag.mensaje != null)
