--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
@@ -112,6 +112,15 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
         <div class="col-md-6">
             <div id="Tabs" role="tabpanel">
                 <ul class="nav nav-tabs" role="tablist">
