--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Anular.cshtml
@@ -39,7 +39,7 @@
     });
 
     function MostrarModal() {
-        GridView_LoteCreditoFacturacion.PerformCallback();
+        GridView_LoteDebitoFacturacion.PerformCallback();
         $("#OpModal").modal("show");
     }
 
@@ -188,35 +188,11 @@
             $("#divNaturaleza").hide();
     }
 
-        function AddFACT() {
-        var datos = {
-            IDs: selectedIDs
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNewCruce", "NotaDeDebitoFacturacion",new { Area = "Facturacion"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-            },
-            error: function (error) {
-            }
-        });
-        selectedIDs = "";
-        GridView_CruceND_x_cruzar.PerformCallback();
-        GridView_CruceND_x_cruzar.UnselectRows();
-            GridView_CruceND.PerformCallback();
-            GridView_notaDebito_det.PerformCallback();
-        $("#FacturasModal").modal("hide");
-    }
     var selectedIDs;
     function OnBeginCallback(s, e) {
         //Pass all selected keys to GridView callback action
         e.customArgs["selectedIDs"] = selectedIDs;
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
     }
     function OnSelectionChanged(s, e) {
         s.GetSelectedFieldValues("secuencial", GetSelectedFieldValuesCallback);
@@ -231,7 +207,8 @@
 
             var datos = {
                 IdSucursal: $("#IdSucursal").val(),
-                IdCliente: IdCliente.GetValue()
+                IdCliente: IdCliente.GetValue(),
+                IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -257,7 +234,8 @@
         function AddFacturas() {
 
         var datos = {
-            IDs: selectedIDs
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -285,7 +263,7 @@
      function VaciarListas() {
 
         var datos = {
-            IDs: selectedIDs
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -315,7 +293,7 @@
     @Html.HiddenFor(q => q.IdNota)
     @Html.HiddenFor(q => q.CodDocumentoTipo)
     @Html.HiddenFor(q => q.CreDeb)
-
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -400,6 +378,15 @@
                     <label for="sc_observacion">Observación</label>
                     @Html.TextBoxFor(q => q.sc_observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.sc_observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    @Html.TextAreaFor(q => q.MotiAnula, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotiAnula, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
