--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Anular.cshtml
@@ -112,8 +112,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @rows = 3 })
-                @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <label for="MotivoAnulacion">Motivo anulación*</label>
+                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
