--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza.cshtml
@@ -75,7 +75,7 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);        
         settings.Columns.Add("IdCobro", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
@@ -92,6 +92,7 @@
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
             column.Width = Unit.Percentage(10);
         });
+        settings.Columns.Add("cr_observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add("cr_estado", "Estado").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
