--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
@@ -10,12 +10,13 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
-        settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.TextFormatString = "[{0}] {1} - {2}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
 
-        settings.Properties.Columns.Add("IdEntidad", "ID", 10);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
+        settings.Properties.Columns.Add("IdEntidad", "ID", 5);
+        settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
+        settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_info_bajo_demanda)
